Added fixes and improvement