@@ -9,9 +9,8 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.text.SimpleDateFormat;
 import java.util.Arrays;
-import java.util.Date;
+import java.util.Comparator;
 
 public class ReportTemplate {
     private final static String REPORT_TEMPLATE = "src/main/java/report/template";
@@ -23,14 +22,16 @@ public class ReportTemplate {
             Path resultDir;
             Path file;
             if (nameResults.contains(".js")) {
-                resultDir = Paths.get(resultsDir + "/perfTestMulti_result");
+                resultDir = removeResultFolder(Paths.get(resultsDir + "/perfTestMulti_result"));
                 FileUtils.copyDirectory(new File(REPORT_TEMPLATE), new File(resultDir.toString()));
                 updatedReport(resultDir, nameResults);
                 file = Paths.get(resultDir + "/html/" + nameResults);
             } else {
-                resultDir = Files.createDirectory(Paths.get(resultsDir + "/perfTest_result"));
-                file = Paths.get(resultDir + "/" + nameResults);
+                resultDir = Paths.get(resultsDir + "/perfTest_result");
+                removeResultFolder(resultDir);
+                file = Paths.get(Files.createDirectory(resultDir) + "/" + nameResults);
             }
+
             return Files.createFile(file).toString();
         } catch (IOException e) {
             e.printStackTrace();
@@ -38,17 +39,25 @@ public class ReportTemplate {
         return "";
     }
 
-    private static String getCurrentDate() {
-        Date date = new Date();
-        SimpleDateFormat formatter = new SimpleDateFormat("dd-MM-yyyy_HH-mm-ss");
-        return formatter.format(date);
+    private static Path removeResultFolder(Path path) {
+        try {
+            if (Files.exists(path)) {
+                Files.walk(path)
+                        .sorted(Comparator.reverseOrder())
+                        .map(Path::toFile)
+                        .forEach(File::delete);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return path;
     }
 
     private static void updatedReport(Path path, String nameResults) {
         Charset charset = StandardCharsets.UTF_8;
         Arrays.asList("/html/sample.html", "/html/various.html").forEach(html -> {
             try {
-                String content = new String(Files.readAllBytes(Paths.get(path + html)), charset);
+                String content = Files.readString(Paths.get(path + html), charset);
                 content = content.replaceAll("spec_name", nameResults.split("\\.")[0]);
                 Files.write(Paths.get(path + html), content.getBytes(charset));
             } catch (IOException e) {
@@ -56,5 +65,4 @@ public class ReportTemplate {
             }
         });
     }
-
 }
